apps/base/dawarich/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-dawarich
  labels:
    trust.cert-manager.io/inject-bundle: "true"
