apps/base/dawarich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dawarich-public
  namespace: app-dawarich
spec:
  entryPoints:
    - tunnel
  routes:
    - match: Host(`location.borooka.ee`)
      kind: Rule
      services:
        - name: dawarich
          port: http
